--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img class="logotipo" src="imagem/logo.png" alt="Logotipo com as letras H S">
         <h1> Savory Secrets</h1>
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Produtos</li>
+            <li class="cabecalho-lista-item">Pratos</li>
             <li class="cabecalho-lista-item">Contato</li>
         </ul>
     </header>
