--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="logotipo" src="imagem/logo.png" alt="Logotipo com as letras H S">
+        <img class="logotipo" src="img/savory-secrets.png" alt="Logotipo savory-secrets">
         <h1> Savory Secrets</h1>
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Pratos</li>
