--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header class="cabecalho">
         <img class="logotipo" src="img/savory-secrets.png" alt="Logotipo savory-secrets">
         <h1> Savory Secrets</h1>
+        <h2>Revelando Delícias Culinárias</h2>
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Pratos</li>
             <li class="cabecalho-lista-item">Contato</li>
