--- a/index.html
+++ b/index.html
@@ -2,23 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Savory Secrets</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Savory Secret</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="cabecalho">
-        <img class="logotipo" src="img/savory-secrets.png" alt="Logotipo savory-secrets">
-        <h1> Savory Secrets</h1>
-        <h2>Revelando Delícias Culinárias</h2>
-        <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Pratos</li>
-            
-            <li class="cabecalho-lista-item">contato</li>
-        </ul>
+    <header>
+        <h1>Welcome to Savory Secret</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-
-
+    <section>
+        <h2>Discover the Secret Flavors</h2>
+        <p>Welcome to Savory Secret, where culinary delights await!</p>
+    </section>
+    <footer>
+        <p>&copy; 2024 Savory Secret. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
