--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="logo.png" alt="Logo do Savory Secrets" class="logo">
+            <img src="img/images.png" alt="sa" class="logo">
             <nav>
                 <ul>
                     <li><a href="#about">Sobre Nós</a></li>
