--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <h2>Cardápio</h2>
             <p>Confira as nossas deliciosas opções do cardápio:</p>
             <ul>
-                <li>Peixe grelhado com água de kiwi e purê de couve-flor</li>
-                <li>peixe do dia, batatinha e espinafre - Grand Hyatt</li>
-                <li>Pirarucu com musseline de mandioquinha</li>
+                <li class="item">Peixe grelhado com água de kiwi e purê de couve-flor</li>
+                <li class="item">peixe do dia, batatinha e espinafre - Grand Hyatt</li>
+                <li class="item">Pirarucu com musseline de mandioquinha</li>
             </ul>
         </div>
     </section>
